hphp/test/zend/good/ext/imap/tests/imap_utf8.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("imap")) print "skip";
}
