hphp/test/zend/bad/ext/imap/tests/imap_mutf7_to_utf8.php.skipif
<?php if (!extension_loaded("imap")) print "skip"; ?>
<?php if (!function_exists("imap_mutf7_to_utf8")) print "skip"; ?>